# leakgauge

./: CITATION.cff  CONTRIBUTING.md  README.md  THREAT_MODEL.md  pyproject.toml
docs/: CONTRACTS.md  DESIGN.md
docs/leaderboard/: index.html
paper/: .gitignore  Makefile  leakgauge.tex
results/: openai_gpt-4o-mini.json  openai_gpt-4o.json  openrouter_meta-llama_llama-3.3-70b-instruct.json
scripts/: pilot_trace.py  plot_pilot.py
src/leakgauge/: __init__.py  _scoring_fallback.py  cases.py  cli.py  environment.py  leaderboard.py  pricing.py  runner.py  scoring.py  suite.py  types.py
src/leakgauge/adapters/: __init__.py  anthropic.py  openai.py  stub.py  vllm.py
src/leakgauge/environments/: __init__.py  demo.py
tests/: test_assembly.py  test_cases_encoded.py  test_cli_help.py  test_cli_list_cases.py  test_cli_single_case.py  test_cli_unpriced_warning.py  test_cli_validation.py  test_delayed.py  test_environment.py  test_leaderboard.py  test_onpath.py  test_pricing.py  test_scoring.py  test_skeleton.py  test_smoke.py  test_suite.py  test_toolrag.py
